--- a/app/partials/confirm.html
+++ b/app/partials/confirm.html
@@ -7,7 +7,7 @@
 	              <h1>My Dinner:</h1>
 	            </div>
 	            <div class="col-md-1">
-	              <h1 id="numberOfGuests">{{numberOfGuests}}</h1>
+	              <h1 id="numberOfGuests">{{getNumberOfGuests()}}</h1>
 	            </div>
 	            <div class="col-md-6">
 	              <h1>people</h1>
@@ -36,7 +36,7 @@
               		<div class="row">
 	                	<div class="col-md-2"></div>
 	                	<div class="col-md-4"><b>Total cost:</b></div>
-	                	<div class="col-md-4" style="text-align: right">{{fullMenuPrice}} SEK</div>
+	                	<div class="col-md-4" style="text-align: right">{{getFullMenuPrice()}} SEK</div>
               		</div>
             	</div>
 	        </div>
