--- a/app/partials/print.html
+++ b/app/partials/print.html
@@ -7,7 +7,7 @@
               			<h1>My Dinner:</h1>
            			</div>
             		<div class="col-md-1">
-              			<h1>{{numberOfGuests}}</h1>
+              			<h1>{{getNumberOfGuests()}}</h1>
             		</div>
             		<div class="col-md-6">
               			<h1>people</h1>
