--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,6 +4,13 @@
   		<div class="container-fluid"></div>
 	</div>
   <div class="container-fluid">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12" style="height: 50px">
+          
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-6" id="introBlock">
         <h1>A Home dinner service</h1>
