--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -24,7 +24,7 @@
           elementum semper nisi.</p>
           <br>
         <h3>Quickly start</h3>
-        <a  href="#!/search" class="btn btn-primary" id="createNewDinnerBtn"><b>Create new dinner!</b></a>
+        <a  href="#!/search" class="btn btn-primary" id="createNewDinnerBtn" align=center><b>Create new dinner!</b></a>
         <p><br></p>
       </div>
       <div class="col-md-6"></div>
