--- a/app/partials/confirm.html
+++ b/app/partials/confirm.html
@@ -1,6 +1,8 @@
 <div id="confirmDinnerView">
+<div class="row"><div class="col-md-12"><p><br></p></div></div>
     <div class="section" id="selectDishSection">
 	    <div class="container-fluid" id="confirmDinnerViewHeader">
+
 	        <div class="row">
 	          <div class="col-md-6">
 	            <div class="col-md-5">
@@ -14,18 +16,22 @@
 	            </div>
 	          </div>
 	          <div class="col-md-6" style="text-align: right">
+	          	<div class="col-md-12">
+	          	<br>
 	            <a class="btn btn-primary" id="backButton" ng-click="go('/search')">Go back and edit</a>
+	            </div>
 	          </div>
 	        </div>
 	    </div>
 	 </div>
 
-	    <div class="section">
+	    <div class="section" style="background-color: #ffffff;opacity: 0.8">
 	      <div class="container">
+	      <div class="row"><p><br></p></div>
 
 	        <div class="row" id="confirmDinnerViewDishes">
 	        	<div class="col-md-2" align="center" ng-repeat="dish in fullMenu">
-              		<img ng-src="{{dish.image}}"  class="img-responsive">
+              		<img ng-src="{{dish.image}}"  class="img-responsive" style="width: 100%;height: 200px">
               		<p id="dishNameRow" style="text-align: center"><b>{{dish.title}}</b></p>
               		<div class="row">
                 		<div class="col-md-11" style="text-align: right">{{getDishPrice(dish)}} SEK</div>
@@ -34,8 +40,8 @@
             	</div>
             	<div class="col-md-3">
               		<div class="row">
-	                	<div class="col-md-2"></div>
-	                	<div class="col-md-4"><b>Total cost:</b></div>
+	                	<div class="col-md-1"></div>
+	                	<div class="col-md-5"><b>Total cost:</b></div>
 	                	<div class="col-md-4" style="text-align: right">{{getFullMenuPrice()}} SEK</div>
               		</div>
             	</div>
@@ -43,7 +49,9 @@
 	      </div>
 	    </div>
 	    
-	    <div class="row" style="text-align: center" align="bottom">
+	    <div class="row" style="text-align: center;background-color: #ffffff;opacity: 0.8" align="bottom">
 	      <a class="btn btn-primary" ng-click="go('/print')" id="printButton">Print Full recipe</a>
+	      <p><br></p>
 	    </div>
+	    <div class="row"><p><br></p></div>
 </div>
