--- a/app/partials/print.html
+++ b/app/partials/print.html
@@ -30,7 +30,7 @@
     <div class="row"><p><br></p></div>
       <div class="container" id="printRecipeViewDishes" style="background-color: #ffffff;opacity: 0.8">
         <div class="row"><div class="col-md-12"><p><br></p></div></div>
-        <div class="row" ng-repeat="dish in fullMenu">
+        <div class="row" ng-repeat="dish in getFullMenu()">
             <div class="col-md-4">
             <div class="row">
               	<div class="col-md-12">
