--- a/app/partials/confirm.html
+++ b/app/partials/confirm.html
@@ -30,7 +30,7 @@
 	      <div class="row"><p><br></p></div>
 
 	        <div class="row" id="confirmDinnerViewDishes">
-	        	<div class="col-md-2" align="center" ng-repeat="dish in fullMenu">
+	        	<div class="col-md-2" align="center" ng-repeat="dish in getFullMenu()">
               		<img ng-src="{{dish.image}}"  class="img-responsive" style="width: 100%;height: 200px">
               		<p id="dishNameRow" style="text-align: center"><b>{{dish.title}}</b></p>
               		<div class="row">
